更新文档，明确开源协议